Fixed layout problems with photos at listing #746

--- a/app/source/css/views/Listing.styl
+++ b/app/source/css/views/Listing.styl
@@ -128,4 +128,11 @@ Listing
             }
         }
     }
+
+    .Listing-photos {
+        figure > img {
+            width: 100%;
+            box-shadow: 0px 0px 15px #ccc;
+        }
+    }
 }
